src/objects/AMSTATCORP__ObjectImportStatus__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AMSTATCORP__ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__isImported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__isMultiObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MultiObject</label>
        <type>Checkbox</type>
    </fields>
    <label>ObjectImportStatus</label>
    <listViews>
        <fullName>AMSTATCORP__All</fullName>
        <columns>NAME</columns>
        <columns>AMSTATCORP__isImported__c</columns>
        <columns>AMSTATCORP__isMultiObject__c</columns>
        <columns>AMSTATCORP__Status__c</columns>
        <columns>AMSTATCORP__ErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>